tui-markdown/src/snapshots/tui_markdown__tests__code-2.snap
---
source: tui-markdown/src/lib.rs
expression: "from_str(indoc!\n{\n    \"\n                ```rust\n                fn main() {\n                    println!(\\\"Hello, world!\\\");\n                }\n                ```\n            \"\n})"
---
Text {
    lines: [
        Line {
            spans: [
                Span {
                    content: "```rust",
                    style: Style {
                        fg: None,
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
            ],
            style: Style {
                fg: None,
                bg: None,
                underline_color: None,
                add_modifier: NONE,
                sub_modifier: NONE,
            },
            alignment: None,
        },
        Line {
            spans: [
                Span {
                    content: "fn",
                    style: Style {
                        fg: Some(
                            Rgb(
                                180,
                                142,
                                173,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: " ",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "main",
                    style: Style {
                        fg: Some(
                            Rgb(
                                143,
                                161,
                                179,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "(",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: ")",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: " ",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "{",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
            ],
            style: Style {
                fg: None,
                bg: None,
                underline_color: None,
                add_modifier: NONE,
                sub_modifier: NONE,
            },
            alignment: None,
        },
        Line {
            spans: [
                Span {
                    content: "    ",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "println!",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "(",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "\"",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "Hello, world!",
                    style: Style {
                        fg: Some(
                            Rgb(
                                163,
                                190,
                                140,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: "\"",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: ")",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
                Span {
                    content: ";",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
            ],
            style: Style {
                fg: None,
                bg: None,
                underline_color: None,
                add_modifier: NONE,
                sub_modifier: NONE,
            },
            alignment: None,
        },
        Line {
            spans: [
                Span {
                    content: "}",
                    style: Style {
                        fg: Some(
                            Rgb(
                                192,
                                197,
                                206,
                            ),
                        ),
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
            ],
            style: Style {
                fg: None,
                bg: None,
                underline_color: None,
                add_modifier: NONE,
                sub_modifier: NONE,
            },
            alignment: None,
        },
        Line {
            spans: [
                Span {
                    content: "```",
                    style: Style {
                        fg: None,
                        bg: None,
                        underline_color: None,
                        add_modifier: NONE,
                        sub_modifier: NONE,
                    },
                },
            ],
            style: Style {
                fg: None,
                bg: None,
                underline_color: None,
                add_modifier: NONE,
                sub_modifier: NONE,
            },
            alignment: None,
        },
    ],
    style: Style {
        fg: None,
        bg: None,
        underline_color: None,
        add_modifier: NONE,
        sub_modifier: NONE,
    },
    alignment: None,
}
