tui-markdown/src/snapshots/tui_markdown__tests__code.snap
---
source: tui-markdown/src/lib.rs
expression: "from_str(indoc!\n{\n    \"\n                ```rust\n                fn main() {\n                    println!(\\\"Hello, world!\\\");\n                }\n                ```\n            \"\n})"
---
```rust
fn main() {
    println!("Hello, world!");
}
```
