tui-markdown/src/snapshots/tui_markdown__tests__highlighted_code-2.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code
---
Text::from_iter([
    Line::from(Span::from("```rust").dark_gray()),
    Line::from_iter([
        Span::from("  1 │ ").dark_gray(),
        Span::from("fn").fg(Color::Rgb(180, 142, 173)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)),
        Span::from("main").fg(Color::Rgb(143, 161, 179)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
        Span::from(" ").fg(Color::Rgb(192, 197, 206)),
        Span::from("{").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("  2 │ ").dark_gray(),
        Span::from("    ").fg(Color::Rgb(192, 197, 206)),
        Span::from("println!").fg(Color::Rgb(192, 197, 206)),
        Span::from("(").fg(Color::Rgb(192, 197, 206)),
        Span::from("\"").fg(Color::Rgb(192, 197, 206)),
        Span::from("Hello, highlighted code!").fg(Color::Rgb(163, 190, 140)),
        Span::from("\"").fg(Color::Rgb(192, 197, 206)),
        Span::from(")").fg(Color::Rgb(192, 197, 206)),
        Span::from(";").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from_iter([
        Span::from("  3 │ ").dark_gray(),
        Span::from("}").fg(Color::Rgb(192, 197, 206)),
    ]),
    Line::from(Span::from("```").dark_gray()),
])
