tui-markdown/src/snapshots/tui_markdown__tests__highlighted_code.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code
---
```rust
  1 │ fn main() {
  2 │     println!("Hello, highlighted code!");
  3 │ }
```
