tui-markdown/src/snapshots/tui_markdown__tests__highlighted_code_with_indentation.snap
---
source: tui-markdown/src/lib.rs
expression: highlighted_code_indented
---
```rust
  1 │ fn main() {
  2 │     // This is a comment
  3 │     HelloWorldBuilder::new()
  4 │         .with_text("Hello, highlighted code!")
  5 │         .build()
  6 │         .show();
  7 │                 
  8 │ }
```
