tui-markdown/src/snapshots/tui_markdown__tests__unhighlighted_code-2.snap
---
source: tui-markdown/src/lib.rs
expression: unhiglighted_code
---
Text::from_iter([
    Line::from("```rust").white().on_black(),
    Line::from("fn main() {").white().on_black(),
    Line::from("    println!("Hello, unhighlighted code!");").white().on_black(),
    Line::from("}").white().on_black(),
    Line::from("```").white().on_black(),
])
