tui-markdown/src/snapshots/tui_markdown__tests__unhighlighted_code.snap
---
source: tui-markdown/src/lib.rs
expression: unhiglighted_code
---
```rust
  1 │ fn main() {
  2 │     println!("Hello, unhighlighted code!");
  3 │ }
```
